# crutch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/crutch/allocator/: allocator.cpp  allocator.hpp  allocator.ipp  new.hpp  new.ipp
source/crutch/allocators/: new_allocator.hpp  new_allocator.ipp
source/crutch/array/: array.hpp  array.ipp
source/crutch/concept/: allocator_for.hpp  assignable.hpp  constructible.hpp  constructible_from.hpp  copy_constructible.hpp  copyable.hpp  deleter_for.hpp  derived_from.hpp  is_not_reference.hpp  moveable.hpp  pointer_for.hpp  trivial_pointer_for.hpp
source/crutch/container/: list.hpp  list.ipp
source/crutch/containers/: vector.hpp  vector.ipp
source/crutch/core/: assert.hpp  core.hpp  macros.hpp  type.hpp  types.hpp  utility.hpp  utility.ipp
source/crutch/error/: error.cpp  error.hpp
source/crutch/format/: format.hpp  format.ipp  format_traits.hpp  format_traits.ipp
source/crutch/function/: unique_function.hpp  unique_function.ipp
source/crutch/intrusive/: intrusive_list.hpp  intrusive_list.ipp  intrusive_node.hpp  intrusive_node.ipp  list.hpp  list.ipp  node.hpp
source/crutch/iterator/: const_ptr.hpp  const_ptr.ipp  ptr.hpp  ptr.ipp
source/crutch/list/: list.hpp  list_const_iterator.hpp  list_iterator.hpp  list_iterator.ipp
source/crutch/macro/: abort.hpp  here.hpp  to_string.hpp  unreachable.hpp
source/crutch/memory/: address.hpp  address.ipp  aligned_raw_ptr.cpp  aligned_raw_ptr.hpp  alignment.hpp  allocate.cpp  allocate.hpp  allocate.ipp  allocate_aligned.cpp  allocate_aligned.hpp  allocator.cpp  allocator.hpp  default.cpp  default.hpp  placement.hpp  placement.ipp  raw_ptr.cpp  raw_ptr.hpp  raw_ptr.ipp  unique_ptr.hpp  unique_ptr.ipp
source/crutch/optional/: optional.hpp  optional.ipp
source/crutch/ptr/: make_unique_ptr.hpp  make_unique_ptr.ipp  unique_ptr.hpp  unique_ptr.ipp
source/crutch/result/: result.hpp  result.ipp
source/crutch/string/: string.cpp  string.hpp  string_builder.cpp  string_builder.hpp  string_comparison.cpp  string_comparison.hpp  string_view.cpp  string_view.hpp  view.hpp  view.ipp
source/crutch/test/: assertion_failure.cpp  assertion_failure.hpp  concole_reporter.cpp  console_reporter.cpp  console_reporter.hpp  copy_only.cpp  copy_only.hpp  framework.hpp  move_only.cpp  move_only.hpp  registrar.hpp  registrar.ipp  reporter.hpp  suite.cpp  suite.hpp  test.hpp  test_engine.cpp  test_engine.hpp  test_factory.hpp  test_factory.ipp  test_framework.hpp  test_registrar.hpp  test_reporter.hpp  test_suite.cpp  test_suite.hpp  test_suite_registrar.cpp  test_suite_registrar.hpp
source/crutch/type_traits/: char_traits.cpp  char_traits.hpp  char_traits.ipp
source/crutch/utility/: source_location.cpp  source_location.hpp
source/crutch/utiltiy/: assertion_failure.cpp  assertion_failure.hpp  macros.hpp  placement.hpp  placement.ipp  source_location.cpp  source_location.hpp
source/crutch/vector/: vector.hpp  vector.ipp
source/wheel/allocator/: allocator.cpp  allocator.hpp
source/wheel/array/: array.hpp  array.ipp
source/wheel/concept/: constructible.hpp  (+4 more)
test/: CMakeLists.txt  main.cpp
test/factorial/: factorial.cpp
test/function/: unit.cpp
test/vector/: stress.cpp  unit.cpp
(+342 files in other folders)
